plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.team5'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.0'

    runtimeOnly("com.h2database:h2")

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // spring 상태 모니터링 (HAproxy, 프로메테우스)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // 프로메테우스
    implementation ("io.micrometer:micrometer-registry-prometheus")

    // 스웨거
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")

    // jjwt
    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")

    // 이메일 전송
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // S3
    implementation("software.amazon.awssdk:s3:2.31.35")

    // elasticsearch
    implementation("org.springframework.boot:spring-boot-starter-data-elasticsearch")

    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
}

tasks.named('test') {
    useJUnitPlatform()
}

def querydslDir = "$buildDir/generated/sources/annotationProcessor/java/main"

//sourceSets {
//    main {
//        java {
//            srcDir querydslDir
//        }
//    }
//}

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

clean {
    delete file(querydslDir)
}